--- a/cadastro/style.css
+++ b/cadastro/style.css
@@ -79,19 +79,26 @@
         outline: none;
         font-size: 15px;
     }
-   
-    .botao_conta {
-        width: 150px;
-        height: 32px;
-        background-color: #0c2e8a;
-        color: white;
-        font-weight: bold;
-        font-size: 11px;
-        border: none;
-        border-radius: 20px;
-        cursor: pointer;
-        align-self: center;
+
+    .botao_contorno{
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+        align-items: center;
     }
+   
+    .botao {
+        background-color: #0039a6;
+        color: white;
+        padding: 12px 30px;
+        border-radius: 25px;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: bold;
+        text-align: center;
+
+    }
+    
    
     .botao_conta:hover {
         background-color: #0a256d;
