--- a/login/style.css
+++ b/login/style.css
@@ -92,15 +92,15 @@
     }
    
    
-    .botao_conectar {
+    .botao {
         background-color: #0039a6;
         color: white;
         border: none;
         padding: 12px 30px;
         border-radius: 25px;
-        cursor: pointer;
+        text-decoration: none;
         font-size: 16px;
-        transition: 0.3s;
+        font-weight: bold;
     }
 
     body{
