--- a/respostas/style.css
+++ b/respostas/style.css
@@ -62,12 +62,17 @@
         display: flex;
         align-items: center;
         gap: 15px;
+        background-color: #fff;
+        border-radius: 10px;
     }
    
-    .foto{
+    .foto {
         width: 80px;
         height: 80px;
         border-radius: 50%;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        margin-left: 5px;
     }
    
     .pergunta{
@@ -80,7 +85,7 @@
     }
 
     .voltar{
-        display: block;        
+    display: block;        
     margin-top: 20px;      
     font-size: 32px;       
     font-weight: bold;              
